--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -23,29 +23,28 @@ the DAA approach has also been subject to debate [@Quinn2021].
 ## Statistical challenges of microbiome data 
 
 Microbiome data display unique properties that are exclusively addressed by DAA
-tools developed for microbiome analysis [@Yang2022]. Specifically, microbiome
-data are characterized by high variability, zero-inflation and compositionality.
+tools developed for microbiome analysis. Specifically, microbiome data are
+characterized by high variability, zero-inflation and compositionality.
 **High variability** expresses that abundance of taxa often varies by several
 orders of magnitude from sample to sample. **Zero-inflation** means that
 typically more than 70% of the values are zeros, which could be due to either
-physical absence (structural zeros) or insufficient sampling effort (sampling zeros).
-**Compositionality** implies that a change in the absolute abundance of one taxon
-will lead to apparent variations in the relative abundances of other taxa in the
-same sample. If neglected, such properties may cause significant bias in the
-results of DAA. Therefore, several approaches have been developed to address the
-unique properties of microbiome data and provide statistically useful results.
+physical absence (structural zeros) or insufficient sampling effort (sampling
+zeros). **Compositionality** implies that a change in the absolute abundance of
+one taxon will lead to apparent variations in the relative abundances of other
+taxa in the same sample. If neglected, such properties may cause significant
+bias in the results of DAA. Therefore, several approaches have been developed to
+address the unique properties of microbiome data and provide statistically
+useful results.
 
 The first approach to target zero-inflated data consists of specialized models,
 such as **over-dispersed count models** and **zero-inflated mixture models**.
-DESeq2 [@Love2014], edgeR [@Chen2016] and corncorb [@Martin2021] are based on
-over-dispersed count models, whereas metagenomeSeq [@Paulson2017], RAIDA
-[@Sohn2015], ZIBB [@ZIBB2018] and Omnibus [@Omnibus2018] implement zero-inflated
-mixture models to address zero-inflation. Typically, these models assume a
-negative binomial, beta-binomial or normal/log-normal distribution. Alternatively, **zero imputation** also represents a valid approach to deal with zero-inflated
-data. ALDEx2 [@Gloor2016] and eBay [@Liu2020] apply a Bayesian model to impute
-the zeros when working with proportion data, accounting for sampling variability
-and sequencing depth variation. Other methods, such as MaAsLin2 [@Mallick2020]
-and ANCOMBC [@ancombc2020] impute the zeros with a pseudo-count strategy.
+DESeq2, edgeR and corncorb are based on over-dispersed count models, whereas metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to
+address zero-inflation. Typically, these models assume a negative binomial,
+beta-binomial or normal/log-normal distribution. Alternatively, **zero imputation** also represents a valid approach to deal with zero-inflated
+data. ALDEx2 and eBay apply a Bayesian model to impute the zeros when working
+with proportion data, accounting for sampling variability and sequencing depth
+variation. Other methods, such as MaAsLin2 and ANCOMBC impute the zeros with a
+pseudo-count strategy.
 
 Regarding the compositionality of microbiome data, several approaches have been
 developed to perform **robust normalization** with methods specifically designed
@@ -53,18 +52,17 @@ to reduce the bias found in compositional data. Some examples include trimmed me
 of M-values (TMM) normalization used by edgeR, relative log expression (RLE) normalization used by DESeq2, cumulative sum scaling (CSS) normalization used by metagenomeSeq, centered log-ratio transformation (CLR) normalization used
 by ALDEx2 and geometric mean of pairwise ratios (GMPR) normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an
 empirical Bayes approach. Other methods to deal with compositional data entail
-reference taxa approach used by DACOMP [@Brill2019] and RAIDA, analyzing the
-pattern of pairwise log ratios as done by ANCOM [@Mandal2015] and bias-correction
-applied by ANCOMBC.
+reference taxa approach used by DACOMP and RAIDA, analyzing the pattern of
+pairwise log ratios as done by ANCOM and bias-correction applied by ANCOMBC.
 
 We recommend to have a look at @Nearing2022. In this study, multiple DAA methods
 were applied to 38 different datasets and their results were compared to one
 another. Because each method follows a slightly different approach in terms of
 assumptions and normalization techniques, it was shown that results on the same
-dataset may differ substantially depending on the method. More recently, @Yang2022 comprehensively evaluated DAA methods via a semi-parametric framework and 106 real datasets. This study also concluded that different methods can produce contradictory results, creating the risk of cherry-picking the most
-favorable options for one’s own hypothesis. Therefore, it is highly recommended
-to perform DAA with multiple methods to determine whether the findings can be
-reproduced by different approaches.
+dataset may differ substantially depending on the method. Recently, @Yang2022 comprehensively evaluated DAA methods via a semi-parametric framework and 106 real datasets. This study also concluded that different methods can produce contradictory results, creating the risk of cherry-picking the most favorable options for
+one’s own hypothesis. Therefore, it is highly recommended to perform DAA with
+multiple methods to determine whether the findings can be reproduced by
+different approaches.
 
 ## Using the tools
 
@@ -119,16 +117,10 @@ tse <- subsetByPrevalentTaxa(tse,
                              rank = "Genus",
                              prevalence = 10 / 100)
 
-# Apply relative abundance transformation
+# Transform count assay to relative abundances
 tse <- transformAssay(tse,
                       assay.type = "counts",
                       method = "relabundance")
-
-# Apply clr transformation
-tse <- transformAssay(tse,
-                      assay.type = "counts",
-                      method = "clr",
-                      pseudocount = 1)
 ```
 
 While some DAA tools provide optional arguments for prevalence filtering, here
@@ -138,25 +130,18 @@ remains the same when multiple tools are used.
 
 ### ALDEx2
 
-In this section, we will show how to perform a simple ALDEx2 analysis. 
-If you wanted to pick a single method, this method could be recommended to use.
-According to the developers experience, it tends to identify the common
-features identified by other methods. This statement is in line with a recent
-independent evaluation by @Nearing2022.  
-Please also have a look at the more extensive 
-[vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html) 
-that covers this flexible tool in more depth. ALDEx2 estimates technical
-variation within each sample per taxon by utilizing the Dirichlet distribution.
-It furthermore applies the centered-log-ratio transformation (or closely
-related log-ratio transforms). Depending on the experimental setup, it will
-perform a two sample Welch's T-test and Wilcoxon-test or a one-way ANOVA and
-Kruskal-Wallis-test. For more complex study designs, there is a possibility to 
-utilize the `glm` functionality within ALDEx2.
+In this section, we will show how to perform DAA with ALDEx2, which can be
+regarded as the method of choice for its consistency, as it normally identifies features that are also found by complementary methods [@Nearing2022]. A more
+extensive introduction to its functionality is available in the
+[ALDEx2 vignette](https://bioconductor.org/packages/release/bioc/vignettes/ALDEx2/inst/doc/ALDEx2_vignette.html). 
 
-The Benjamini-Hochberg procedure is applied by default to correct for
-multiple testing. Below we show a simple example that illustrates the
-workflow.
-
+ALDEx2 estimates technical variation within each sample per taxon by utilizing
+the Dirichlet distribution. It furthermore applies the CLR transformation (or
+closely related log-ratio transforms). Depending on the experimental setup, it
+will perform a two sample Welch's t-test and Wilcoxon test or a one-way ANOVA
+and Kruskal-Wallis test. For more complex study designs, there is a possibility
+to utilize the `glm` functionality within ALDEx2. The Benjamini-Hochberg
+procedure is applied by default to correct for multiple testing.
 
 ```{r run-aldex2}
 # Load package
@@ -198,7 +183,7 @@ per sample. Next to that, we can also create a plot that shows the dispersion
 on the x-axis instead of log-ratio abundance. Red dots represent genera that are
 differentially abundant ($q \leq 0.1$) between the 2 groups. Black points are
 rare taxa and grey ones are abundant taxa. The dashed line represent an effect
-size of 1. See @Gloor2016 to learn more about these plots.
+size of 1. @Gloor2016 provides more information on these plots.
 
 ```{r plot-aldex2}
 par(mfrow = c(1, 2))
@@ -227,9 +212,7 @@ indicates the proportion of overlap). Also, the authors recommend to
 focus on effect sizes and CIs rather than interpreting the p-value. To
 keep the comparison simple, we will here use the p-value as decision
 criterion. But please be aware that the effect size together with the
-CI is a better answer to the question we are typically interested in
-(see also [this
-article](https://www.nature.com/articles/d41586-019-00857-9)).
+CI is a better answer to the question we are typically interested in.
 
 
 ```{r aldex2-res}
@@ -394,12 +377,12 @@ linda.res <- linda(feature.dat = as.data.frame(assay(tse)),
                    alpha = 0.05,
                    prev.filter = 0,
                    mean.abund.filter = 0)
-
-linda_out <- linda.res$output$patient_statusControl
 ```
 
 ```{r linda-res}
-# to scan the table for genera where H0 could be rejected:
+linda_out <- linda.res$output$patient_statusControl
+
+# List genera for which H0 could be rejected:
 linda_out %>%
   as.data.frame() %>%
   filter(reject) %>%
@@ -409,17 +392,15 @@ linda_out %>%
 
 ### ZicoSeq
 
-Subsequently, we add a linear model and permutation-based method, see
-details at [tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html).
-
-This approach has been assessed to exhibit high power and a low false
-discovery rate, which has the following components:
+Subsequently, we demonstrate DAA with ZicoSeq, a method based on linear models
+and permutation. Further details can be found in
+[this tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html).
+This approach has been assessed to exhibit high power and a low false discovery
+rate, which has the following components:
 
   1. Winsorization to decrease the influence of outliers;
-  
   2. Posterior sampling based on a beta mixture prior to address
   sampling variability and zero inflation;
-  
   3. Reference-based multiple-stage normalization to address
   compositional effects;
 
@@ -458,20 +439,27 @@ ZicoSeq.plot(ZicoSeq.obj = zicoseq.obj,
              pvalue.type ='p.adj.fdr')
 ```
 
+### PhILR
+
+PhILR is a tree-based method that tests group-wise associations based on
+balances. A detailed introduction to this method is available in
+[this Bioconductor tutorial](https://www.bioconductor.org/packages/devel/bioc/vignettes/philr/inst/doc/philr-intro.html). 
 
 ### Comparison of methods
 
-The different methods yield slightly different results but they could
-be also expected to overlap to a substantial degree. As an exercirse,
+Although the methods described above yield unidentical results, they are
+expected to agree on a few differentially abundant taxa. As an exercise,
 you can compare the outcomes between the different methods in terms of
 effect sizes, significances, or other aspects that are comparable
-between the methods.
+between them.
 
 
-## Confounding variables
+## DAA with confounding
 
-Confounders are common in experimental studies. Generally, they can be
-classified into 3 groups:
+Confounders can be defined as variables that are related to and affect the
+apparent dynamics between the response and the main independent variable.
+They are common in experimental studies. Generally, they can be classified
+into 3 groups:
 
 - Biological confounders, such as age, sex, etc. 
 
@@ -481,11 +469,29 @@ classified into 3 groups:
 - Confounders resulting from experimental models, such as cage effect,
   sample background, etc.
 
-Adjusting confounders is an important practice to reach an unbiased
+Controlling for confounders is an important practice to reach an unbiased
 conclusion. To perform causal inference, it is crucial that the method
-is able to include covariates in the model. This is not possible with
+is able to include confounders in the model. This is not possible with
 statistical tests of general use, such as the Wilcoxon test. In contrast,
-methods that target DAA, such as those described in this chapter, allow controlling for confounders. Below we show how to include a confounders in ANCOMBC, LinDA and ZicoSeq.
+methods that target DAA, such as those described in this chapter, allow controlling for confounders. In the following examples, we will perform DAA
+with a main independent variable and a few confounders.
+
+### Selecting confounders
+
+In addition to patient status, we will now control for two confounders: cohort
+and library size. The former is a categorical variable with three factors,
+whereas the latter is a discrete numerical variable. Remarkably, most DAA
+methods accept these two and several other data types.
+
+For demonstration, library size is treated as a confounder and included
+in the formulas of the DAA methods. Although this is a satisfactory approach to
+control for uneven sequencing efforts across samples, rarefaction generally represents a better solution [@Schloss2023]. With that said, library size can be readily computed and added to the colData.
+
+
+```{r daa-data-libsize}
+# Compute and store library size in colData
+colData(tse)$library_size <- colSums(assay(tse, "counts"))
+```
 
 
 ### ANCOMBC
@@ -494,7 +500,7 @@ methods that target DAA, such as those described in this chapter, allow controll
 # perform the analysis 
 ancombc_cov <- ancombc2(tse,
                         assay_name = "counts",
-                        fix_formula = "patient_status + cohort",
+                        fix_formula = "patient_status + cohort + library_size",
                         p_adj_method = "fdr",
                         lib_cut = 0,
                         group = "patient_status", 
@@ -519,11 +525,10 @@ ancombc_cov$res %>%
 
 ### LinDA
 
-
 ```{r run-adj-linda}
 linda_cov <- linda(as.data.frame(assay(tse, "counts")),
                    as.data.frame(colData(tse)),
-                   formula = "~ patient_status + cohort",
+                   formula = "~ patient_status + cohort + library_size",
                    alpha = 0.05,
                    prev.filter = 0,
                    mean.abund.filter = 0)
@@ -547,7 +552,7 @@ set.seed(123)
 zicoseq.obj <- ZicoSeq(feature.dat = as.matrix(assay(tse)),
                        meta.dat = as.data.frame(colData(tse)),
                        grp.name = "patient_status",
-                       adj.name = "cohort", 
+                       adj.name = c("cohort", "library_size"), 
                        feature.dat.type = "count",
                        return.feature.dat = TRUE,
                        prev.filter = 0,
@@ -565,20 +570,6 @@ zicoseq_out %>%
   head() %>%
   knitr::kable()
 ```
-
-
-
-## Tree-based methods
-
-Let us next cover phylogeny-aware methods to perform group-wise
-associations.
-
-### Group-wise associations testing based on balances
-
-For testing associations based on balances, check the philr
-R/Bioconductor package.
-
-
 
 ## Additional resources
 
