--- a/book.bib
+++ b/book.bib
@@ -1424,4 +1424,11 @@ https://github.com/thomasp85/patchwork},
   doi = {10.1186/s40168-020-00816-x}
 }
 
-
+@article{Schloss2023,
+  title={Rarefaction is currently the best approach to control for uneven sequencing effort in amplicon sequence analyses},
+  author={Schloss, Patrick D},
+  journal={bioRxiv},
+  pages={2023--06},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
