Correct redundancy spelling and add doi to Schloss

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -44,7 +44,7 @@ be generally divided in two categories: unsupervised and supervised ordination.
 The former includes Principal Coordinate Analysis (PCoA), Principal Component
 Analysis (PCA) and Uniform Manifold Approximation and Projection for Dimension
 Reduction (UMAP), whereas the latter is mainly represented by distance-based
-Redundance Analysis (dbRDA). We will first discuss unsupervised ordination
+Redundancy Analysis (dbRDA). We will first discuss unsupervised ordination
 methods and then proceed to supervised ones.
 
 To run the examples in this chapter, the following packages should be imported:
