--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -8,7 +8,8 @@ chapterPreamble()
 This section provides an introduction to Differential Abundance Analysis (DAA),
 which is used to identify differences in the abundances of individual taxa (at
 any taxonomic level) between two or more groups, such as treatment and control.
-Here, we demonstrate its implementation on Tengeler2020, described in chapter \@ref(tengeler-desc).
+Here, we demonstrate its implementation on Tengeler2020, described in chapter
+\@ref(tengeler-desc).
 
 The goal of DAA is to identify biomarkers of a certain phenotype or condition,
 and gain understanding of a complex system by looking at its isolated components.
@@ -38,30 +39,38 @@ useful results.
 
 The first approach to target zero-inflated data consists of specialized models,
 such as **over-dispersed count models** and **zero-inflated mixture models**.
-DESeq2, edgeR and corncorb are based on over-dispersed count models, whereas metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to
+DESeq2, edgeR and corncorb are based on over-dispersed count models, whereas
+metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to
 address zero-inflation. Typically, these models assume a negative binomial,
-beta-binomial or normal/log-normal distribution. Alternatively, **zero imputation** also represents a valid approach to deal with zero-inflated
-data. ALDEx2 and eBay apply a Bayesian model to impute the zeros when working
-with proportion data, accounting for sampling variability and sequencing depth
-variation. Other methods, such as MaAsLin2 and ANCOMBC impute the zeros with a
-pseudo-count strategy.
+beta-binomial or normal/log-normal distribution. Alternatively, **zero imputation**
+also represents a valid approach to deal with zero-inflated data. ALDEx2 and
+eBay apply a Bayesian model to impute the zeros when working with proportion
+data, accounting for sampling variability and sequencing depth variation. Other
+methods, such as MaAsLin2 and ANCOMBC impute the zeros with a pseudo-count strategy.
 
 Regarding the compositionality of microbiome data, several approaches have been
 developed to perform **robust normalization** with methods specifically designed
-to reduce the bias found in compositional data. Some examples include trimmed mean
-of M-values (TMM) normalization used by edgeR, relative log expression (RLE) normalization used by DESeq2, cumulative sum scaling (CSS) normalization used by metagenomeSeq, centered log-ratio transformation (CLR) normalization used
-by ALDEx2 and geometric mean of pairwise ratios (GMPR) normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an
-empirical Bayes approach. Other methods to deal with compositional data entail
-reference taxa approach used by DACOMP and RAIDA, analyzing the pattern of
-pairwise log ratios as done by ANCOM and bias-correction applied by ANCOMBC.
+to reduce the bias found in compositional data. Some examples include trimmed
+mean of M-values (TMM) normalization used by edgeR, relative log expression (RLE)
+normalization used by DESeq2, cumulative sum scaling (CSS) normalization used
+by metagenomeSeq, centered log-ratio transformation (CLR) normalization used
+by ALDEx2 and geometric mean of pairwise ratios (GMPR) normalization used by
+Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional
+bias by an empirical Bayes approach. Other methods to deal with compositional
+data entail reference taxa approach used by DACOMP and RAIDA, analyzing the
+pattern of pairwise log ratios as done by ANCOM and bias-correction applied by
+ANCOMBC.
 
 We recommend to have a look at @Nearing2022. In this study, multiple DAA methods
 were applied to 38 different datasets and their results were compared to one
 another. Because each method follows a slightly different approach in terms of
 assumptions and normalization techniques, it was shown that results on the same
-dataset may differ substantially depending on the method. Recently, @Yang2022 comprehensively evaluated DAA methods via a semi-parametric framework and 106 real datasets. This study also concluded that different methods can produce contradictory results, creating the risk of cherry-picking the most favorable options for
-one’s own hypothesis. Therefore, it is highly recommended to perform DAA with
-multiple methods to determine whether the findings can be reproduced by
+dataset may differ substantially depending on the method. Recently, @Yang2022
+comprehensively evaluated DAA methods via a semi-parametric framework and 106
+real datasets. This study also concluded that different methods can produce
+contradictory results, creating the risk of cherry-picking the most favorable
+options for one’s own hypothesis. Therefore, it is highly recommended to perform
+DAA with multiple methods to determine whether the findings can be reproduced by
 different approaches.
 
 ## Using the tools
@@ -466,7 +475,8 @@ Controlling for confounders is an important practice to reach an unbiased
 conclusion. To perform causal inference, it is crucial that the method
 is able to include confounders in the model. This is not possible with
 statistical tests of general use, such as the Wilcoxon test. In contrast,
-methods that target DAA, such as those described in this chapter, allow controlling for confounders. In the following examples, we will perform DAA
+methods that target DAA, such as those described in this chapter, allow
+controlling for confounders. In the following examples, we will perform DAA
 with a main independent variable and a few confounders.
 
 ### Selecting confounders
@@ -566,7 +576,8 @@ zicoseq_out %>%
 
 ## Additional resources
 
-DAA can be performed by several means. Although most of them provide similar functionality, some may be more suitable than others given a certain study
+DAA can be performed by several means. Although most of them provide similar
+functionality, some may be more suitable than others given a certain study
 design or data type. Commonly used DAA tools include:
 
 - ALDEx2 [@Gloor2016]
