--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -527,7 +527,7 @@ diversity. Keep in mind that the formula fed to `adonis2` can take more than one
 independent variable, so that you can also (and very often should) include
 covariates of your studies.
 
-### Redundance analysis (RDA)
+### Redundancy analysis (RDA)
 
 Here we apply RDA, an ordination method that provides dimensions with
 the largest variation between the data based in the light of the specified
