--- a/book.bib
+++ b/book.bib
@@ -1368,6 +1368,7 @@ https://github.com/thomasp85/patchwork},
   issue = {1},
   page ={225},
   langid = {english}
+  doi = {10.1186/s12859-020-03552-z}
 }
 
 
@@ -1381,6 +1382,7 @@ https://github.com/thomasp85/patchwork},
   volume = {181},
   page ={1-19},
   langid = {english}
+  doi = {10.1186/s40168-021-01129-3}
 }
 
 
@@ -1395,9 +1397,8 @@ https://github.com/thomasp85/patchwork},
   issue = {1},
   page ={1-23},
   langid = {english}
+  doi = {10.1186/s12864-018-5160-5}
 }
-
-
 
 
 @Article{ZIBB2018,
@@ -1414,21 +1415,22 @@ https://github.com/thomasp85/patchwork},
 }
 
 @article{Tengeler2020,
-  title={Gut microbiota from persons with attention-deficit/hyperactivity disorder affects the brain in mice},
-  author={C Tengeler, Anouk and A Dam, Sarita and Wiesmann, Maximilian and Naaijen, Jilly and van Bodegom, Miranda and Belzer, Clara and J Dederen, Pieter and Verweij, Vivienne and Franke, Barbara and Kozicz, Tamas and Arias Vasquez, Alejandro and J Kiliaan, Amanda},
-  journal={Microbiome},
-  volume={8},
-  pages={1--14},
-  year={2020},
-  publisher={Springer},
+  title = {Gut microbiota from persons with attention-deficit/hyperactivity disorder affects the brain in mice},
+  author = {C Tengeler, Anouk and A Dam, Sarita and Wiesmann, Maximilian and Naaijen, Jilly and van Bodegom, Miranda and Belzer, Clara and J Dederen, Pieter and Verweij, Vivienne and Franke, Barbara and Kozicz, Tamas and Arias Vasquez, Alejandro and J Kiliaan, Amanda},
+  journal = {Microbiome},
+  volume = {8},
+  pages = {1--14},
+  year = {2020},
+  publisher = {Springer},
   doi = {10.1186/s40168-020-00816-x}
 }
 
 @article{Schloss2023,
-  title={Rarefaction is currently the best approach to control for uneven sequencing effort in amplicon sequence analyses},
-  author={Schloss, Patrick D},
-  journal={bioRxiv},
-  pages={2023--06},
-  year={2023},
-  publisher={Cold Spring Harbor Laboratory}
+  title = {Rarefaction is currently the best approach to control for uneven sequencing effort in amplicon sequence analyses},
+  author = {Schloss, Patrick D},
+  journal = {bioRxiv},
+  pages = {2023--06},
+  yea r= {2023},
+  publisher = {Cold Spring Harbor Laboratory}
+  doi = {10.1101/2023.06.23.546313}
 }
