Fix book.bib typo

--- a/book.bib
+++ b/book.bib
@@ -1367,7 +1367,7 @@ https://github.com/thomasp85/patchwork},
   volume = {21},
   issue = {1},
   page ={225},
-  langid = {english}
+  langid = {english},
   doi = {10.1186/s12859-020-03552-z}
 }
 
@@ -1381,7 +1381,7 @@ https://github.com/thomasp85/patchwork},
   journal = {Microbiome},
   volume = {181},
   page ={1-19},
-  langid = {english}
+  langid = {english},
   doi = {10.1186/s40168-021-01129-3}
 }
 
@@ -1396,7 +1396,7 @@ https://github.com/thomasp85/patchwork},
   volume = {19},
   issue = {1},
   page ={1-23},
-  langid = {english}
+  langid = {english},
   doi = {10.1186/s12864-018-5160-5}
 }
 
@@ -1430,7 +1430,7 @@ https://github.com/thomasp85/patchwork},
   author = {Schloss, Patrick D},
   journal = {bioRxiv},
   pages = {2023--06},
-  yea r= {2023},
-  publisher = {Cold Spring Harbor Laboratory}
+  year= {2023},
+  publisher = {Cold Spring Harbor Laboratory},
   doi = {10.1101/2023.06.23.546313}
 }
