Add link to benchmarking and minor polish

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -272,7 +272,7 @@ ggplot(df, aes(x = d0, y = dmds)) +
   theme_bw()
 ```
 
-## Supervized ordination
+## Supervised ordination
 
 dbRDA is a supervised counterpart of PCoA, that is, it takes into account the
 covariates specified by the user to maximize the variance with respect to the
