--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -1,4 +1,4 @@
-# Machine learning {#machine_learning}
+# Machine Learning {#machine_learning}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
