--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -28,7 +28,7 @@
 [NGS Analysis Basics](http://girke.bioinformatics.ucr.edu/GEN242/tutorials/rsequences/rsequences/) provides a walk-through of the above-mentioned features with detailed examples.
 
 
-### Alternative containers for microbiome data
+### Phyloseq: an alternative container for microbiome data
 
 The `phyloseq` package and class became the first widely used data
 container for microbiome data science in R. Many methods for taxonomic
@@ -48,15 +48,13 @@ each other.
                related to samples.  `rowTree` : This slot is similar
                to `phy_tree` in `phyloseq` to store phylogenetic tree.
 
-In this book, you will come across terms like `FeatureIDs` and
+In this book, you will encounter terms such as `FeatureIDs` and
 `SampleIDs`.  `FeatureIDs` : These are basically OTU/ASV ids which are
 row names in `assays` and `rowData`.  `SampleIDs` : As the name
 suggests, these are sample ids which are column names in `assays` and
-row names in `colData`.
-
-`FeatureIDs` and `SampleIDs` are used but the technical terms
-`rownames` and `colnames` are encouraged to be used, since they relate
-to actual objects we work with.
+row names in `colData`. `FeatureIDs` and `SampleIDs` are used but the
+technical terms `rownames` and `colnames` are encouraged to be used, since
+they relate to actual objects we work with.
 
 <img
 src="https://raw.githubusercontent.com/FelixErnst/TreeSummarizedExperiment
@@ -64,18 +62,28 @@ src="https://raw.githubusercontent.com/FelixErnst/TreeSummarizedExperiment
 width="100%"/>
 
 
-### Resources for phyloseq
+#### Benchmarking TreeSE with phyloseq
 
-The (Tree)SummarizedExperiment objects can be converted into the alternative phyloseq format, for which further methods are available.
+TreeSE objects can be converted into phyloseq objects and vice versa, therefore
+it is possible to compare the two containers in terms of computational efficiency.
+Remarkably, TreeSE and phyloseq were benchmarked against one another in mia v1.2.3
+and phyloseq v1.38.0, respectively. 5 standard microbiome analysis operationswere
+applied to 4 datasets of varying size with both containers. In a nutshell, TreeSE
+and phyloseq showed a similar performance for datasets of small and medium size
+for most of the operations. However, TreeSE performed more efficiently as the size
+of the datasets increased. Further details on such results can be found in the
+[benchmarking repository](https://github.com/microbiome/benchmarking).
+
+#### Resources on phyloseq
+
+The phyloseq container provides analogous methods to TreeSE. The following
+material can be used to familiarize with such alternative methods:
 
  * [List of R tools for microbiome analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
  * phyloseq [@McMurdie2013]
  * [microbiome tutorial](http://microbiome.github.io/tutorials/)
  * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)
  * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@Callahan2016].
-
-
-
 
 
 ## R programming resources
