Simplify section on supervised ordination

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -462,13 +462,11 @@ apparent dynamics between the response and the main independent variable.
 They are common in experimental studies. Generally, they can be classified
 into 3 groups:
 
-- Biological confounders, such as age, sex, etc. 
+- Biological confounders, such as age and sex 
 
-- Technical confounders produced by data collection, storage, DNA
-  extraction, sequencing process, etc.
+- Technical confounders produced during sample collection, processing and analysis
 
-- Confounders resulting from experimental models, such as cage effect,
-  sample background, etc.
+- Confounders resulting from experimental models, such as batch effects and sample history
 
 Controlling for confounders is an important practice to reach an unbiased
 conclusion. To perform causal inference, it is crucial that the method
