Fix beta diversity bug

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -292,11 +292,11 @@ and a few covariates such as their gender and age.
 ```{r import-rda-dataset}
 # Load data
 data("enterotype", package = "mia")
-tse <- enterotype
+tse2 <- enterotype
 
 # Apply relative transform
-tse <- transformAssay(tse,
-                      method = "relabundance")
+tse2 <- transformAssay(tse2,
+                       method = "relabundance")
 ```
 
 dbRDA can be perfomed with the `runRDA` function. In addition to the arguments
@@ -307,14 +307,14 @@ gender and age, and exclude observations where one of these variables is missing
 
 ```{r run-rda}
 # Perform RDA
-tse <- runRDA(tse,
-              assay.type = "relabundance",
-              formula = assay ~ ClinicalStatus + Gender + Age,
-              distance = "bray",
-              na.action = na.exclude)
+tse2 <- runRDA(tse2,
+               assay.type = "relabundance",
+               formula = assay ~ ClinicalStatus + Gender + Age,
+               distance = "bray",
+               na.action = na.exclude)
 
 # Store results of PERMANOVA test
-rda_info <- attr(reducedDim(tse, "RDA"), "significance")
+rda_info <- attr(reducedDim(tse2, "RDA"), "significance")
 ```
 
 The importance of each variable on the similarity between samples can be
@@ -343,14 +343,14 @@ the following custom function.
 library(stringr)
 library(ggord)
 
-rda <- attr(reducedDim(tse, "RDA"), "rda")
+rda <- attr(reducedDim(tse2, "RDA"), "rda")
 
 # Covariates that are being analyzed
 variable_names <- c("ClinicalStatus", "Gender", "Age")
 
 # Since na.exclude was used, if there were rows missing information, they were 
 # dropped off. Subset coldata so that it matches with rda.
-coldata <- colData(tse)[ rownames(rda$CCA$wa), ]
+coldata <- colData(tse2)[ rownames(rda$CCA$wa), ]
 
 # Adjust names
 # Get labels of vectors
@@ -537,7 +537,7 @@ the variation between communities.
 ```{r}
 # Agglomerate data to Species level
 tse <- mergeFeaturesByRank(tse,
-                         rank = "Species")
+                           rank = "Species")
 
 # Set seed for reproducibility
 set.seed(1576)
