--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -28,7 +28,7 @@
 [NGS Analysis Basics](http://girke.bioinformatics.ucr.edu/GEN242/tutorials/rsequences/rsequences/) provides a walk-through of the above-mentioned features with detailed examples.
 
 
-### Phyloseq: an alternative container for microbiome data
+### phyloseq: an alternative container for microbiome data
 
 The `phyloseq` package and class became the first widely used data
 container for microbiome data science in R. Many methods for taxonomic
